# RustyLibraryShrinker

./: .gitignore  CODE.md  Cargo.toml  LICENSE  README.md  README_FR.md  build.bat  build.rs  build_all.ps1
doc/: crates.js  settings.html  src-files.js
doc/RustyLibraryShrinker/: all.html  fn.detect_type.html  fn.find_by_glob.html  fn.find_in_dir.html  fn.main.html  fn.print_final_summary.html  index.html
doc/RustyLibraryShrinker/archive/: fn.extract_comic.html  index.html  sidebar-items.js
doc/RustyLibraryShrinker/image_utils/: fn.encode_webp.html  fn.finalize_image_save.html  fn.process_jp2_image.html  fn.process_single_image.html  index.html
doc/RustyLibraryShrinker/models/: constant.DEFAULT_LANG.html  (+25 more)
doc/search.index/: 000acb0450d4.js  010dba097404.js  01ba375d93c3.js  01ff52c30134.js  032406e688b1.js  04633513967f.js  04f6b33f2416.js  055de5d8e889.js  06a43a4b96fd.js  074a994d5ce0.js  099f1b3df2da.js  09a538093754.js  09b6b15a44a4.js  09eab539ba20.js  0a5712720138.js  0b7f181ba8d1.js  0e0021e04ad9.js  0e4deadb03a8.js  0e50e1337e5a.js  0f01afed2d36.js  0f43b891225b.js  104ae0b35946.js  1136af3b0ef1.js  11d88f4faf1d.js  1212ee7f4dd3.js  13ca525b3ff1.js  14d44ce51714.js  176a53031b02.js  17987487b5ea.js  18f176c2ecaf.js  19b9796418d1.js  1a020e550905.js  1a7e0e850883.js  1bd7ffeaf6a9.js  1c000e8f989b.js  1c909c92e30f.js  1e0d420461f0.js  1ea166baebf4.js  1f8735b05be3.js  206ae40caf8d.js  (+97 more)
locales/en/: main.ftl
locales/fr/: main.ftl
src/: image_utils.rs  main.rs  models.rs  processor.rs
src/archive/: epub.rs  mod.rs  pdf.rs  processor.rs  zip_rar.rs
(+96 files in other folders)
