[package]
name = "RustyLibraryShrinker"
version = "1.0.0"
edition = "2024"
authors = ["StuffGest <stuffgest@gmail.com>"]
description = "High-performance comic book compression tool with WebP conversion supporting CBR, CBZ, PDF, and EPUB formats"
license = "MIT"
repository = "https://github.com/StuffGest/RustyLibraryShrinker"
homepage = "https://github.com/StuffGest/RustyLibraryShrinker"
keywords = ["comic", "cbr", "cbz", "pdf", "shrink"]
categories = ["command-line-utilities", "multimedia::images"]
readme = "README.md"

[dependencies]
rayon = "1.12.0"
image = { version = "0.25.10", default-features = false, features = [
    "png",
    "jpeg",
] }
webp = "0.3.1"
jpeg2k = "0.10.1"
zip = "8.5.1"
unrar = "0.5.8"
walkdir = "2.5.0"
clap = { version = "4.6.1", features = ["derive"] }
indicatif = "0.18.4"
anyhow = "1.0.102"
tempfile = "3.27.0"
crossbeam-channel = "0.5.15"
lopdf = "0.40.0"
moxcms = "0.8"
glob = "0.3.3"
epub = "2.1.5"
log = "0.4"
simplelog = "0.12"
time = { version = "0.3", features = ["local-offset", "macros", "formatting"] }

[profile.release]
opt-level = "z"      # Optimise pour la taille (z) au lieu de la vitesse (3)
lto = true           # Active le Link Time Optimization (très efficace)
codegen-units = 1    # Réduit le parallélisme de compil pour mieux optimiser
panic = "abort"      # Retire la logique de "unwind" (gain de place)
strip = true         # ÉQUIVALENT À LA COMMANDE STRIP (retire les symboles)
